tests/machine/x/zig/string_index.error
Error on line 0: output mismatch
-- got --
111
-- want --
o
1: const std = @import("std");
